; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/smc/extr_if_smc.c_smc_select_bank.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/smc/extr_if_smc.c_smc_select_bank.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.smc_softc = type { i32 }

@BSR = common dso_local global i32 0, align 4
@BUS_SPACE_BARRIER_READ = common dso_local global i32 0, align 4
@BUS_SPACE_BARRIER_WRITE = common dso_local global i32 0, align 4
@BSR_BANK_MASK = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.smc_softc*, i32)* @smc_select_bank to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @smc_select_bank(%struct.smc_softc* %0, i32 %1) #0 {
  %3 = alloca %struct.smc_softc*, align 8
  %4 = alloca i32, align 4
  store %struct.smc_softc* %0, %struct.smc_softc** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load %struct.smc_softc*, %struct.smc_softc** %3, align 8
  %6 = getelementptr inbounds %struct.smc_softc, %struct.smc_softc* %5, i32 0, i32 0
  %7 = load i32, i32* %6, align 4
  %8 = load i32, i32* @BSR, align 4
  %9 = load i32, i32* @BUS_SPACE_BARRIER_READ, align 4
  %10 = load i32, i32* @BUS_SPACE_BARRIER_WRITE, align 4
  %11 = or i32 %9, %10
  %12 = call i32 @bus_barrier(i32 %7, i32 %8, i32 2, i32 %11)
  %13 = load %struct.smc_softc*, %struct.smc_softc** %3, align 8
  %14 = getelementptr inbounds %struct.smc_softc, %struct.smc_softc* %13, i32 0, i32 0
  %15 = load i32, i32* %14, align 4
  %16 = load i32, i32* @BSR, align 4
  %17 = load i32, i32* %4, align 4
  %18 = load i32, i32* @BSR_BANK_MASK, align 4
  %19 = and i32 %17, %18
  %20 = call i32 @bus_write_2(i32 %15, i32 %16, i32 %19)
  %21 = load %struct.smc_softc*, %struct.smc_softc** %3, align 8
  %22 = getelementptr inbounds %struct.smc_softc, %struct.smc_softc* %21, i32 0, i32 0
  %23 = load i32, i32* %22, align 4
  %24 = load i32, i32* @BSR, align 4
  %25 = load i32, i32* @BUS_SPACE_BARRIER_READ, align 4
  %26 = load i32, i32* @BUS_SPACE_BARRIER_WRITE, align 4
  %27 = or i32 %25, %26
  %28 = call i32 @bus_barrier(i32 %23, i32 %24, i32 2, i32 %27)
  ret void
}

declare dso_local i32 @bus_barrier(i32, i32, i32, i32) #1

declare dso_local i32 @bus_write_2(i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
